# MyBlockchainRust

.devcontainer/: container.docker  devcontainer.json
workspace/: Cargo.toml  README.md
workspace/blockchain_node/: Cargo.toml
workspace/blockchain_node/src/: blockchain.rs  main.rs  node.rs  protocol_messages.rs
workspace/blockchain_node/src/OLD/: main.rs_
workspace/blockchain_web_api/: Cargo.toml
workspace/blockchain_web_api/src/: main.rs
workspace/src/: blockchain.rs  main.rs  node.rs  protocol_messages.rs
workspace/src/OLD/: common.rs_  gossip_node.rs_
