[package]
name = "MyBlockchainRust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
num_enum = "0.7"
bincode = { version = "2.0", features = [ "serde" ] }
axum = "0.8"
