[package]
name = "blockchain_node"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rand = "0.8"
chrono = "0.4"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
num_enum = "0.7"
bincode = { version = "2.0", features = [ "serde" ] }

[[bin]]
name = "blockchain_node"
path = "src/main.rs"